CORS BUG FIXED